--- a/src/app/components/Home/home-content/home-content.component.html
+++ b/src/app/components/Home/home-content/home-content.component.html
@@ -1,13 +1,16 @@
+<form class="findProductForm" action="/action_page.php">
+  <label for="findProduct" class="ml-sm-4 mr-sm-3">Trouver un produit :</label>
+  <input type="text" class="form-control mr-sm-3" id="findProduct">
+  <button type="submit" class="btn btn-primary mr-sm-5">Submit</button>
+</form>
 
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-3">ICI BIENTOT DES NEWS SUR LES DERNIERS PRODUITS ET SHOPS !!!!</h1>
-    <p class="lead">et une map inch allah</p>
-    <hr class="my-2">
-    <p>Cliquez pour aller sur cette même page</p>
-    <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Go</a>
-    </p>
-  </div>
-</div>"
+
+<agm-map [latitude]="lat" [longitude]="lng">
+  <agm-direction [origin]="origin" [destination]="destination">
+  </agm-direction>
+</agm-map>
+
+
+
+
 
